--- a/cef/style.css
+++ b/cef/style.css
@@ -1,90 +1,30 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0f0f0;
+.notify-div {
+    margin: 10px;
+    border-radius: 15px 5px 5px 15px;
+    transition: width 5s;
+    background: #343a40;
+    padding: 10px;
+    color: #fff;
 }
 
-#dialog-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+.notify-title {
+    padding-top: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
-.dialog-box {
-    background-color: white;
-    border-radius: 8px;
-    width: 300px;
-    max-width: 90%;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
+.notify-icon {
+    margin-right: 10px;
 }
 
-.dialog-header {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.notify-title-text {
+    font-size: 15px;
+    font-weight: 700;
 }
 
-.dialog-header h2 {
-    margin: 0;
-    font-size: 18px;
-}
-
-.close-btn {
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.dialog-body {
-    padding: 20px;
-    font-size: 16px;
-}
-
-.dialog-footer {
-    padding: 10px;
-    text-align: right;
-    border-top: 1px solid #ddd;
-}
-
-.yes-btn, .no-btn {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-left: 10px;
-}
-
-.yes-btn {
-    background-color: #4CAF50;
-    color: white;
-}
-
-.no-btn {
-    background-color: #f44336;
-    color: white;
-}
-
-.hidden {
-    display: none;
-}
-
-.open-dialog-btn {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    background-color: #2196F3;
-    color: white;
+.notify-main-text {
+    padding-left: 15px;
+    width: 90%;
 }
